[package]
name = "fontlint"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
read-fonts = { git = "https://github.com/googlefonts/fontations.git", tag = "v0.0.5" }
thiserror = "1"
